# find-contours

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: lodepng.cpp.859C202A9F37F956.idx  lodepng.h.55381825D5D78412.idx  variance.cu.55FB2AB3DFF2BEA2.idx
reference/: aigc.cpp
src/: dbg.cuh  kernel.cuh  main.cpp  run.cu  variance.cu  wrapper.cuh
